# fittedismip-gris

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/fittedismip-gris/: __init__.py
src/fittedismip_gris/: AssignFP.py  FittedISMIP_GrIS_fit.py  FittedISMIP_GrIS_postprocess.py  FittedISMIP_GrIS_preprocess.py  FittedISMIP_GrIS_project.py  Import2lmData.py  None_GIS_globalsl.nc  cli.py  filter_temp_data.py  import_temp_data.py
